syntax = "proto3";

package collector;

option go_package = "pkg/pb";

service Discovery {
  rpc RegisterInstance(RegisterInstanceRequest) returns(RegisterInstanceResponse);
}

message RegisterInstanceRequest {
  string instance_name = 1;
  string db_dsn = 2;
}

message RegisterInstanceResponse {
  int64 id = 1;
  string instance_name = 2;
  string host = 3;
  int64 port = 4;
}