syntax = "proto3";

package collector;

option go_package = "pkg/pb";

service RecommendationsAPI {
  rpc GetRecommendations(GetRecommendationsRequest) returns (GetRecommendationsResponse);
}

message GetRecommendationsRequest {
  string instance_name = 1;
}

message GetRecommendationsResponse {
  message Knob {
    string name = 1;
    float value = 2;
  }
}